--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,15 @@
-Click==7.1.2
-coverage==5.5
-ddt==1.4.1
-flake8==3.8.3
-gitpython==3.1.11
-mock==3.0.5
-pytest==6.0.1; python_version >= '3.5'
-pytest==4.6.5; python_version < '3.5'
-pytest-cov==2.10.1
+Click==8.1.7
+coverage==7.3.2
+ddt==1.7.0
+iniconfig==2.0.0
+flake8==6.1.0
+gitdb==4.0.11
+gitpython==3.1.40
+mccabe==0.7.0
+mock==5.1.0
+pluggy==1.3.0
+pycodestyle==2.11.1
+pyflakes==3.1.0
+pytest==7.4.3
+pytest-cov==4.1.0
+smmap==5.0.1
