--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,38 @@
 backports.shutil_get_terminal_size==1.0.0
-cached-property==1.5.1; python_version < '3.8'
-certifi==2020.6.20
-chardet==3.0.4
-colorama==0.4.3; sys_platform == 'win32'
-distro==1.5.0
-docker==5.0.0
+attrs==23.1.0
+bcrypt==4.0.1
+certifi==2023.7.22
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+cryptography==41.0.5
+distlib==0.3.7
+distro==1.8.0
+docker==6.1.3
 docker-pycreds==0.4.0
 dockerpty==0.4.1
 docopt==0.6.2
-idna==2.10
+entrypoints==0.4
+filelock==3.13.1
+idna==3.4
 ipaddress==1.0.23
-jsonschema==3.2.0
-paramiko==2.7.1
+jsonschema==4.19.2
+jsonschema-specifications==2023.7.1
+more-itertools==10.1.0
+packaging==23.2
+paramiko==3.3.1
+pycparser==2.21
+pynacl==1.5.0
+pyrsistent==0.20.0
 PySocks==1.7.1
-python-dotenv==0.17.0
-pywin32==227; sys_platform == 'win32'
-PyYAML==5.4.1
-requests==2.24.0
-texttable==1.6.2
-urllib3==1.25.10; python_version == '3.3'
-websocket-client==0.57.0
+python-dotenv==1.0.0
+PyYAML==6.0.1
+referencing==0.30.2
+requests==2.31.0
+rpds-py==0.12.0
+six==1.16.0
+texttable==1.7.0
+toml==0.10.2
+urllib3==2.0.7
+wcwidth==0.2.9
+websocket-client==1.6.4
