--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37,py39,pre-commit
+envlist = py37,py38,py39,py310,py311,pre-commit
 
 [testenv]
 usedevelop=True
@@ -15,7 +15,6 @@ passenv =
 setenv =
     HOME=/tmp
 deps =
-    -rrequirements-indirect.txt
     -rrequirements.txt
     -rrequirements-dev.txt
 commands =
